--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/webcat12345/ngx-intl-tel-input"
+    "url": "git+sitmena/angular-custom-phone-number"
   },
   "author": {
-    "name": "webcat12345",
-    "email": "webcat91@gmail.com"
+    "name": "subhi qudsi",
+    "email": "s.qudsi@sit-mena.com"
   },
   "keywords": [
     "angular",
