--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-intl-tel-input",
-  "version": "3_2_0.sitech.1",
+  "version": "3.2.sitech1",
   "peerDependencies": {
     "@angular/common": "8.x - 13.x",
     "@angular/core": "8.x - 13.x",
